# codex-ai-agent

./: .env.example  .gitignore  README.md  agent-v1-plan.md  human-readable-knowledge-base.md  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/models/: schemas.py
app/services/: chunker.py  crawler.py  embedder.py  extractor.py  markdown_store.py  summarizer.py  vector_store.py
article_agent_v1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html
frontend/static/: app.js  styles.css
