[project]
name = "article-agent-v1"
version = "0.1.0"
description = "A first-version article ingestion agent with Chroma and human-readable Markdown knowledge cards."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chromadb>=1.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "lxml_html_clean>=0.4.0",
  "openai>=1.75.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "trafilatura>=1.9.0",
  "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
